--- a/style.css
+++ b/style.css
@@ -1,506 +1,569 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@600&family=Poppins:ital,wght@1,700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@600&family=Poppins:ital,wght@1,700&display=swap");
 
-:root{
-    --yellow: #f9ca24;
-}
-
-*{
-    font-family: 'Nunito', sans-serif;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-    outline: none;
-    border: none;
-    text-transform: capitalize;
-    transition: all 0.2s ease;
-    scroll-behavior: smooth;
+:root {
+  --yellow: #f9ca24;
 }
 
-*::selection{
-    background: var(--yellow);
-    color: #333;
+* {
+  font-family: "Nunito", sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  outline: none;
+  border: none;
+  text-transform: capitalize;
+  transition: all 0.2s ease;
+  scroll-behavior: smooth;
 }
 
-html{
-    font-size: 62.5%;
-    overflow-x: hidden;
+*::selection {
+  background: var(--yellow);
+  color: #333;
 }
 
-html::-webkit-scrollbar{
-    width: 1.4rem;
+html {
+  font-size: 62.5%;
+  overflow-x: hidden;
 }
 
-html::-webkit-scrollbar-track{
-    background: #222;
+html::-webkit-scrollbar {
+  width: 1.4rem;
 }
 
-html::-webkit-scrollbar-thumb{
-    background: var(--yellow);
+html::-webkit-scrollbar-track {
+  background: #222;
 }
 
-body{
-    background: #111;
-    display: flex;
-    position: relative;
+html::-webkit-scrollbar-thumb {
+  background: var(--yellow);
 }
 
-section{
-    min-height: 100vh;
-    padding: 1rem;
+body {
+  background: #111;
+  display: flex;
+  position: relative;
 }
 
-.btn{
-    padding: .7rem 3rem;
-    background: #333;
-    color: #fff;
-    cursor: pointer;
-    margin-top: 1rem;
-    font-size: 2rem ;
-    border-radius: 5rem;
+section {
+  min-height: 100vh;
+  padding: 1rem;
 }
 
-.btn i{
-    padding: 0 .5rem;
-    font-size: 1.8rem;
-
+.btn {
+  padding: 0.7rem 3rem;
+  background: #333;
+  color: #fff;
+  cursor: pointer;
+  margin-top: 1rem;
+  font-size: 2rem;
+  border-radius: 5rem;
 }
 
-.btn:hover{
-    background: var(--yellow)
+.btn i {
+  padding: 0 0.5rem;
+  font-size: 1.8rem;
 }
 
-.heading{
-    text-align: center;
-    margin: 0 6rem;
-    font-size: 4rem;
-    padding: 1rem;
-    border-bottom: .1rem solid #fff4;
-    color: #fff;
+.btn:hover {
+  background: var(--yellow);
 }
 
-.heading span{
-    color: var(--yellow);
+.heading {
+  text-align: center;
+  margin: 0 6rem;
+  font-size: 4rem;
+  padding: 1rem;
+  border-bottom: 0.1rem solid #fff4;
+  color: #fff;
 }
 
-header{
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 1000;
-    height: 100%;
-    width: 35rem;
-    background: #1a1a1a;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    text-align: center;
-    overflow-y: scroll;
-}
-header .user{
-    padding: 0.5rem 0 0rem 0;
-}
-header .user img{
-    height: 15rem;
-    width: 15rem;
-    border-radius: 50%;
-    object-fit: cover;
-    object-position: center;
-    border: 0.5rem solid var(--yellow);
-    cursor: pointer;
-}
-header .user:hover{
-    margin-top: 7rem;
-    img{
-        margin: 5rem 0;
-        scale: 1.5;
-    }
-}
-header .user .name{
-    font-size: 3.5rem;
-    color: #fff;   
+.heading span {
+  color: var(--yellow);
 }
 
-header .user .post{
-    font-size: 2rem;
-    color: #eee;
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  height: 100%;
+  width: 35rem;
+  background: #1a1a1a;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  overflow-y: scroll;
+}
+header .user {
+  padding: 0.5rem 0 0rem 0;
+}
+header .user img {
+  height: 15rem;
+  width: 15rem;
+  border-radius: 50%;
+  object-fit: cover;
+  object-position: center;
+  border: 0.5rem solid var(--yellow);
+  cursor: pointer;
+}
+header .user:hover {
+  margin-top: 7rem;
+  img {
+    margin: 5rem 0;
+    scale: 1.5;
+  }
+}
+header .user .name {
+  font-size: 3.5rem;
+  color: #fff;
 }
 
-header .navbar{
-    width: 100%;    
+header .user .post {
+  font-size: 2rem;
+  color: #eee;
 }
 
-header .navbar ul{
-    list-style: none;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-direction: column;
-    gap: 1.5rem;
-    padding: 13px 0;
+header .navbar {
+  width: 100%;
 }
 
-header .navbar ul li a{
-    width: 25rem;
-    display: block;
-    padding: 1rem;
-    background: #333;
-    color: #fff;
-    font-size: 2rem;
-    border-radius: 5rem;
-}
-header::-webkit-scrollbar{
-   width: 0.3rem;
-   background: #f9ca24;
-}
-header .navbar ul li a:hover{
-    background: var(--yellow);
-}
-main{
-    width: 100%;
-    margin-left: 35rem;
+header .navbar ul {
+  list-style: none;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: column;
+  gap: 1.5rem;
+  padding: 13px 0;
 }
 
-
-main .image{
-    display: none;
-    margin: 2rem auto;
-    width: 27rem;
-    height: 27rem;
+header .navbar ul li a {
+  width: 25rem;
+  display: block;
+  padding: 1rem;
+  background: #333;
+  color: #fff;
+  font-size: 2rem;
+  border-radius: 5rem;
 }
-main .image img{
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    object-fit: cover;
-    object-position: center;
-    border: 0.5rem solid var(--yellow);
+header::-webkit-scrollbar {
+  width: 0.3rem;
+  background: #f9ca24;
 }
-.home{
-    display: flex;
-    justify-content: center;
-    flex-flow: column;
-    padding: 0 15rem;
+header .navbar ul li a:hover {
+  background: var(--yellow);
 }
-
-.home h3{
-    font-size: 2.5rem;
-    color: #fff;
+main {
+  width: 100%;
+  margin-left: 35rem;
 }
 
-.home h1{
-    font-size: 5rem;
-    color: #fff;
+main .image {
+  display: none;
+  margin: 2rem auto;
+  width: 27rem;
+  height: 27rem;
+}
+main .image img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  object-fit: cover;
+  object-position: center;
+  border: 0.5rem solid var(--yellow);
 }
 
-.home h1 span{
-    color: var(--yellow);
+/* ====== Start home ====== */
+
+.home {
+  display: flex;
+  justify-content: center;
+  flex-flow: column;
+  padding: 0 15rem;
 }
 
-.home h3 span{
-    color: var(--yellow);
+.home h3 {
+  font-size: 2.5rem;
+  color: #fff;
 }
 
-.home p{
-    font-size: 2rem;
-    color: #eee;
-    padding: 1rem 0;
+.home h1 {
+  font-size: 5rem;
+  color: #fff;
 }
 
-.about .row{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    padding: 1rem 0;
+.home h1 span {
+  color: var(--yellow);
 }
 
-.about .row .info{
-    flex: 1 1 48rem;
-    padding: 2rem 1rem;
-    padding-left: 6rem;
+.home h3 span {
+  color: var(--yellow);
 }
 
-.about .row .info h3{
-    font-size: 2rem;
-    color: var(--yellow);
-    padding: 1rem 0;
-    font-weight: normal;
+.home p {
+  font-size: 2rem;
+  color: #eee;
+  padding: 1rem 0;
+}  
+    
+/* ====== End home ====== */
+
+/* ====== Start about ====== */
+ .about{
+    padding: 0 4rem;
+ }
+.about .row {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 1rem 0;
 }
 
-.about p{
-    font-size: 2rem;
-    color: #eee;
-    padding: 1rem 5rem;
-    text-align: justify; 
+.about .row .info {
+  flex: 1 1 48rem;
+  padding: 2rem 1rem;
 }
 
-.about p span{
-    color: var(--yellow);
+.about .row .info h3 {
+  font-size: 2rem;
+  color: var(--yellow);
+  padding: 1rem 0;
+  font-weight: normal;
 }
 
-.about .row .info h3 span{
-    color: #eee;
-    padding: 0 .5rem;
-
+.about p {
+  font-size: 2rem;
+  color: #eee;
+  text-align: justify;
 }
 
-.about .row .counter{
-    flex: 1 1 48rem;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+.about p span {
+  color: var(--yellow);
 }
 
-.about .row .counter .box{
-    width: 20rem;
-    background: #222;
-    text-align: center;
-    padding: 2rem;
-    margin: 2rem;
+.about .row .info h3 span {
+  color: #eee;
+  padding: 0 0.5rem;
 }
 
-.about .row .counter .box span{
-    font-size: 4rem;
-    color: var(--yellow);
+.about .row .counter {
+  flex: 1 1 48rem;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
-.about .row .counter .box h3{
-    font-size: 2rem;
-    color: #fff;
+.about .row .counter .box {
+  width: 20rem;
+  background: #222;
+  text-align: center;
+  padding: 2rem;
+  margin: 2rem;
 }
 
-.education .box-container{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    padding: 1rem 0;
-    padding-left: 3rem;
+.about .row .counter .box span {
+  font-size: 4rem;
+  color: var(--yellow);
 }
 
-.education .box-container .box{
-    width: 27rem;
-    margin: 4rem 1rem;
-    padding-left: 4rem;
-    border-left: .2rem solid #fff;
-    position: relative;
+.about .row .counter .box h3 {
+  font-size: 2rem;
+  color: #fff;
+}   
+    
+/* ====== End about ====== */
+
+/* ====== Start education ====== */
+ 
+.education .box-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding: 1rem 0;
+  padding-left: 3rem;
 }
 
-.education .box-container .box span{
-    font-size: 1.3rem;
-    background: #222;
-    color: #fff;
-    border-radius: 5rem;
-    padding: .5rem 2.5rem;
+.education .box-container .box {
+  width: 27rem;
+  margin: 4rem 1rem;
+  padding-left: 4rem;
+  border-left: 0.2rem solid #fff;
+  position: relative;
 }
 
-.education .box-container .box h3{
-    font-size: 2rem;
-    color: #fff;
-    padding-top: 1.5rem;
+.education .box-container .box span {
+  font-size: 1.3rem;
+  background: #222;
+  color: #fff;
+  border-radius: 5rem;
+  padding: 0.5rem 2.5rem;
 }
 
-.education .box-container .box p{
-    font-size: 1.4rem;
-    color: #eee;
-    padding: 1rem 0;
+.education .box-container .box h3 {
+  font-size: 2rem;
+  color: #fff;
+  padding-top: 1.5rem;
 }
 
-.education .box-container .box i{
-    position: absolute;
-    top: -1.5rem;
-    left: -2.5rem;
-    height: 5rem;
-    width: 5rem;
-    border-radius: 50%;
-    line-height: 5rem;
-    text-align: center;
-    font-size: 2rem;
-    color: #fff;
-    background: var(--yellow);
+.education .box-container .box p {
+  font-size: 1.4rem;
+  color: #eee;
+  padding: 1rem 0;
 }
 
-.portfolio .box-container{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    padding: 2rem 0;
+.education .box-container .box i {
+  position: absolute;
+  top: -1.5rem;
+  left: -2.5rem;
+  height: 5rem;
+  width: 5rem;
+  border-radius: 50%;
+  line-height: 5rem;
+  text-align: center;
+  font-size: 2rem;
+  color: #fff;
+  background: var(--yellow);
+}   
+    
+/* ====== End education ====== */
+
+/* ====== Start portfolio ====== */
+
+.portfolio .box-container {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 2rem;
+}
+.portfolio .box-container .box {
+  padding: 2rem;
+  height: 100%;
+  width: 100%;
+  cursor: pointer;
+  transition: all 0.4s ease;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  gap: 3rem;
+}
+.right {
+  flex-direction: row-reverse;
+}
+.portfolio .box-container .box span {
+  color: #f9ca24;
+  font-size: 2.3rem;
+}
+.portfolio .box-container .box .project-img {
+  width: 30rem;
+  height: 20rem;
+}
+.portfolio .box-container .box img {
+  height: 100%;
+  width: 100%;
+  border: 2px solid #fff;
+  border-radius: 10px;
+  object-fit: contain;
+}
+.portfolio .box-container .box .project-details {
+  width: 100%;
+  height: 100%;
+  padding: 1rem;
+  color: #fff;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  gap: 2rem;
+  font-size: 1.8rem;
+}
+.portfolio .box-container .box .project-details .buttons {
+  display: flex;
+  gap: 1rem;
+  width: 100%;
+}
+.portfolio .box-container .box .project-details .buttons button {
+  padding: 0.9rem 1.5rem;
+  background: #333;
+  color: #fff;
+  font-size: 1.6rem;
+  border-radius: 5rem;
+  cursor: pointer;
 }
 
-.portfolio .box-container .box{
-    margin: 2rem;
-    height: 20rem;
-    width: 26rem;
-    cursor: pointer;
-    transition: all 0.4s ease;
+/* ====== End portfolio ====== */
+
+/* ====== Start contact ====== */
+
+.contact .row {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
-.portfolio .box-container .box img{
-    height: 100%;
-    width: 100%;
-    border: 2px solid #fff;
-    border-radius: 10%;
-    object-fit: contain;
+.contact .row .content {
+  flex: 1 1 30rem;
+  padding: 4rem;
+  padding-bottom: 0;
 }
 
-.portfolio .box-container .box:hover img{
-    scale: 1.1;
+.contact .follow {
+  padding-left: 35rem;
 }
 
-.contact .row{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
+.contact .follow i {
+  font-size: 3rem;
+  color: #eee;
+  padding-left: 2rem;
 }
 
-.contact .row .content{
-    flex: 1 1 30rem;
-    padding: 4rem;
-    padding-bottom: 0;
+.cur {
+  cursor: pointer;
+  width: fit-content;
 }
 
-.contact .follow{
-    padding-left: 35rem;
+.contact .row form {
+  flex: 1 1 45rem;
+  padding: 2rem;
+  margin: 2rem;
+  margin-bottom: 4rem;
 }
 
-.contact .follow i{
-    font-size: 3rem;
-    color: #eee;
-    padding-left: 2rem;
+.contact .row form .box {
+  padding: 1.5rem;
+  margin: 1rem 0;
+  background: #3333;
+  color: #fff;
+  text-transform: none;
+  font-size: 1.7rem;
+  width: 100%;
+}
+.contact a {
+  color: #fff;
 }
 
-.cur{
-    cursor: pointer;
-    width: fit-content;
+.contact .row form .box::placeholder {
+  text-transform: capitalize;
 }
 
-.contact .row form{
-    flex: 1 1 45rem;
-    padding: 2rem;
-    margin: 2rem;
-    margin-bottom: 4rem;
+.contact .row form .message {
+  height: 15rem;
+  resize: none;
 }
 
-.contact .row form .box{
-    padding: 1.5rem;
-    margin: 1rem 0;
-    background: #3333;
-    color: #fff;
-    text-transform: none;
-    font-size: 1.7rem;
-    width: 100%;
+.contact .row .content .title {
+  text-transform: uppercase;
+  color: #fff;
+  font-size: 3rem;
+  padding-bottom: 2rem;
 }
 
-.contact .row form .box::placeholder{
-    text-transform: capitalize;
+.contact .row .content .info h3 {
+  display: flex;
+  align-items: center;
+  font-size: 2rem;
+  color: #eee;
+  padding: 1rem 0;
+  font-weight: normal;
 }
 
-.contact .row form .message{
-    height: 15rem;
-    resize: none;
+.contact .row .content .info i {
+  padding-right: 1rem;
+  color: var(--yellow);
 }
 
-.contact .row .content .title{
-    text-transform: uppercase;
-    color: #fff;
-    font-size: 3rem;
-    padding-bottom: 2rem;
+.top {
+  position: fixed;
+  bottom: 1.7rem;
+  right: 1.8rem;
+  z-index: 100;
+  display: none;
+  color: #f9ca24;
 }
 
-.contact .row .content .info h3{
-    display: flex;
-    align-items: center;
-    font-size: 2rem;
-    color: #eee;
-    padding: 1rem 0;
-    font-weight: normal;
+svg {
+  height: 50px;
+  width: 50px;
 }
+   
+/* ====== End contact ====== */
 
-.contact .row .content .info i{
-    padding-right: 1rem;
-    color: var(--yellow);
-}
-
-.top{
-    position: fixed;
-    bottom: 1.7rem;
-    right: 1.8rem;
-    z-index: 100;
-    display: none;
-    color: #f9ca24;
-}
-
-svg{
-    height: 50px;
-    width: 50px;
-
-}
 
 /* Media Queries */
 
-@media screen  and (max-width: 1200px){
-    html{
-        font-size: 55%;
-    }
-    .home{
-        padding: 1rem 4rem;
-    }
-    .about{
-        padding: 1rem 4rem;
-    }
+@media screen and (max-width: 1200px) {
+  html {
+    font-size: 55%;
+  }
+  .home {
+    padding: 1rem 4rem;
+  }
+  .about {
+    padding: 1rem 4rem;
+  }
 }
 
-@media screen  and  (max-width: 991px){
-    header{
-        left: -120%;
-    }
-    main{
-        margin-left: 0;
-    }
-    main .image{
-        display: block;
-    }
-    header.toggle{
-        left: 0;
-    }
-    body{
-        padding: 0;
-    }
+@media screen and (max-width: 991px) {
+  header {
+    left: -120%;
+  }
+  main {
+    margin-left: 0;
+  }
+  main .image {
+    display: block;
+  }
+  body {
+    padding: 0;
+  }
 }
 
-@media screen  and (max-width: 768px){
-    html{
-        font-size: 50%;
-    }
+@media screen and (max-width: 768px) {
+  html {
+    font-size: 50%;
+  }
+}
+@media screen and (max-width: 600px) {
+  .portfolio .box-container .box {
+    display: flex;
+    flex-direction: column;
+  }
 }
 
-@media screen  and (max-width: 400px){
-    header{
-        width: 100vw;
-    }
+@media screen and (max-width: 400px) {
+  header {
+    width: 100vw;
+  }
 
-    .heading{
-        margin: 0 3rem;
-    }
+  .heading {
+    margin: 0 3rem;
+  }
 
-    .about .row .counter .box{
+  .about .row .counter .box {
+    width: 100%;
+  }
+  .education .box-container .box {
+    width: 100%;
+  }
+
+  .portfolio .box-container .box {
+    width: 100%;
+  }
+    .portfolio .box-container .box .project-img {
         width: 100%;
+        height: 20rem;
+    }
+    .portfolio .box-container .box .project-details .buttons{
+        flex-direction: column;
     }
 
-    .education .box-container .box{
-        width: 100%;
-    }
 
-    .portfolio .box-container .box{
-        width: 100%;
-    }
-
-    .contact .row form{
-        margin: 3rem 0;
-    }
+  .contact .row form {
+    margin: 3rem 0;
+  }
 }
-
